# gdocdown

./: .gitignore  Cargo.toml  LICENSE  README.md
.claude/skills/gdocdown/: SKILL.md
src/: api.rs  apply.rs  lib.rs  main.rs
tests/: baseline.md  live_sync.rs  property.rs
tools/: create_fixture.py
