[package]
name = "gdocdown"
version = "0.0.1"
edition = "2021"
description = "Edit Google Docs as markdown via incremental batchUpdate sync"

[dependencies]
similar = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
ureq = { version = "2", features = ["json"] }
notify = "6"
diffy = "0.4"
